Add relocate logo placeholder and add style for headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,22 @@
 }
 
 body {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    color: #3a3a3a;
 }
+
+/* headings and logo */
+
+h1, h2 {
+ font-family: 'Bebas Neue', cursive;
+ text-transform: uppercase;
+ letter-spacing: 4px;
+ color: #252525;
+}
+
+#logo {
+    width: 150px;
+}
+
+/* headings and logo */
