--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,16 @@ h1, h2 {
 }
 
 #logo {
-    width: 150px;
+    float: left;
+    max-width: 100%;
+    height: auto;
 }
 
-/* headings and logo */
+
+/* hero image */
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url(../images/adidasxmeissen-zx8000-porcelain-5-rgb.jpg) no-repeat center center;
+}
