--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,37 @@ h1, h2 {
     height: auto;
 }
 
+/* navigation links */
+
+#menu {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+#menu, #logo {
+    line-height: 75px;
+}
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+#menu a {
+    text-decoration: none;
+    color: inherit;
+
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #f44336;
+    transition: 0.5s;
+
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
 
 /* hero image */
 
