--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,5 +65,6 @@ h1, h2 {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url(../images/adidasxmeissen-zx8000-porcelain-5-rgb.jpg) no-repeat center center;
+    background-image: url(../images/adidasxmeissen-zx8000-porcelain-5-rgb.jpg);
+    object-fit: contain;
 }
