--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,4 +69,18 @@ h1, h2 {
     
 }
 
+.text-box {
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: left;
+}
+
+.text-box h1 {
+    color: #fff;
+}
+
 /*  */
