--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,13 +204,51 @@ footer {
 }
 
 .footer-section-content p {
+    color: #777;
     max-width: 500px;
     margin: 10px auto;
     line-height: 28px;
     font-size: 14px;
 }
 
+.social-networks {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
 
+.social-networks li {
+    margin: 0 35px;
+}
+
+.social-networks a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.social-networks a i {
+    font-size: 1.1rem;
+    transition: color 0.4s;
+}
+
+.social-networks a:hover i {
+    color: #f44336;
+}
+
+.footer-section-bottom {
+    background: rgb(0, 0, 0);
+    width: 100vw;
+    padding: 15px 0;
+    text-align: center;
+}
+
+.footer-section-bottom p {
+    color: #777;
+    font-size: 14px;
+    text-transform: uppercase;
+}
 
 
 /*  */
