Style organize image columns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,6 +258,13 @@ hr {
     text-align: center;
 }
 
+.gallery-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-gap: 5px;
+    margin-bottom: 60px;
+}
+
 /* check out our gallery */
 
 /* footer-section */
