--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,8 @@ h1, h2 {
 
 /* navigation links */
 
+
+
 #menu {
     font-family: 'Bebas Neue', cursive;
     font-size: 110%;
@@ -64,12 +66,30 @@ h1, h2 {
 
 /* hero image */
 
+.image-and-overlay {
+    
+}
+
 #hero-image {
     height: 480px;
     width: 100%;
     background: url(../images/stock-photo-painted-floral-canvas-shoes-512963239.jpg) no-repeat center center / cover;
+    
+    
 
 }
+
+.image-and-overlay .overlay {
+    height: 480px;
+    width: 100%;
+    opacity: 0.7;
+    background: linear-gradient(to bottom, red, blue);
+    
+    
+}
+
+
+
 
 /* text-box */
 
