--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,6 @@ h1, h2 {
 
 /* navigation links */
 
-
-
 #menu {
     font-family: 'Bebas Neue', cursive;
     font-size: 110%;
@@ -83,10 +81,12 @@ h1, h2 {
     height: 480px;
     width: 100%;
     opacity: 0.7;
-    background: linear-gradient(to bottom, red, blue);
+    background: linear-gradient(to bottom, rgba(4,9,30,0.7), rgba(4,9,30,0.7));
     
     
 }
+
+
 
 
 
