--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,100 @@ body {
     color: #3a3a3a;
 }
 
+/* headings and logo 2 */
+
+.header {
+    min-height: 60vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.3), rgba(4,9,30,0.3)), url(../images/stock-photo-painted-floral-canvas-shoes-512963239.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+nav {
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav img {
+    width: 150px;
+}
+
+.nav-links {
+    flex: 1;
+    text-align: right;
+}
+
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-links ul li a {
+    font-family: 'Bebas Neue', cursive;
+    color: #fff;
+    text-decoration: none;
+    font-size: 110%;
+    letter-spacing: 5px;
+}
+
+.nav-links ul li::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-links ul li:hover::after {
+    width: 100%;
+}
+
+.text-box {
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: left;
+}
+
+.text-box h1 {
+    font-size: 62px;
+}
+
+.text-box p {
+    font-family: 'Bebas Neue', cursive;
+}
+
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.hero-btn:hover {
+    border: 1px solid #f44336;
+    background: #f44336;
+    transition: 0.5s;
+}
+
+/* headings and logo 2 */
+
 /* headings and logo */
 
 h1, h2 {
@@ -113,6 +207,8 @@ h1, h2 {
 }
 
 /*  */
+
+/* headings and logo */
 
 .block-how {
     background: #202020;
