--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,108 +107,7 @@ nav img {
 
 /* headings and logo 2 */
 
-/* headings and logo */
-
-h1, h2 {
- font-family: 'Bebas Neue', cursive;
- text-transform: uppercase;
- letter-spacing: 4px;
- color: #252525;
-}
-
-#logo {
-    float: left;
-    padding-left: 35px;
-    max-width: 100%;
-    height: auto;
-}
-
-/* navigation links */
-
-#menu {
-    font-family: 'Bebas Neue', cursive;
-    font-size: 110%;
-    letter-spacing: 4px;
-}
-#menu, #logo {
-    line-height: 250px;
-}
-#menu li {
-    float: right;
-    list-style-type: none;
-    margin-right: 30px;
-    color: #fff;
-}
-#menu a {
-    text-decoration: none;
-    color: inherit;
-
-}
-
-#menu a:hover {
-    border-bottom: 1px solid #f44336;
-    transition: 0.5s;
-
-}
-
-.active {
-    border-bottom: 1px solid #fff;
-}
-
-
-/* hero image */
-
-.image-and-overlay {
-    
-}
-
-#hero-image {
-    height: 480px;
-    width: 100%;
-    background: url(../images/stock-photo-painted-floral-canvas-shoes-512963239.jpg) no-repeat center center / cover;
-    
-    
-
-}
-
-.image-and-overlay .overlay {
-    height: 480px;
-    width: 100%;
-    opacity: 0.7;
-    background: linear-gradient(to bottom, rgba(4,9,30,0.7), rgba(4,9,30,0.7));
-    
-    
-}
-
-
-
-
-
-
-/* text-box */
-
-.text-box {
-    width: 90%;
-    color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: left;
-}
-
-.text-box h1 {
-    color: #fff;
-    font-size: 62px;
-}
-
-.text-box p {
-    font-family: 'Bebas Neue', cursive;
-}
-
-/*  */
-
-/* headings and logo */
+/* how to */
 
 .block-how {
     background: #202020;
