--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,3 +457,26 @@ footer {
     transform: scale(1.2);
     z-index: 2;
 }
+
+/* Media queries */
+
+
+/* Gallery page queries */
+
+@media screen and (max-width: 950px) {
+    
+
+#photos {
+    column-count: 3;
+}
+
+
+}
+
+/* For small screen sizes 800px and down */
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
+
+}
