--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,11 +57,11 @@ nav img {
 
 .nav-links ul li::after {
     content: '';
+    text-decoration: underline;
     width: 0%;
     height: 2px;
     background: #f44336;
     display: block;
-    margin: auto;
     transition: 0.5s;
 }
 
@@ -322,7 +322,7 @@ hr {
 
 .inner-container {
     width: 55%;
-    float: right;
+    float: left;
     background-color: #f8594e;
     padding: 100px;
 }
@@ -344,8 +344,7 @@ hr {
 
 .about-skills {
     color: #fff;
-    display: flex;
-    justify-content: space-between;
+    padding: 0 20px 0 20px;
     font-weight: 700;
     font-size: 13px;
 }
@@ -456,6 +455,41 @@ footer {
     transform: scale(1.2);
     z-index: 2;
 }
+
+/* contact page */
+
+.contact-bg {
+    background: transparent;
+    margin: 90px;
+    position: relative;
+    border: 1px solid #111;
+    
+}
+
+.contact-container {
+    width: 60%;
+    margin: 25px auto;
+    background: #f8594e;
+    border: 3px solid #111;
+}
+
+.contact-container h1 {
+
+    margin: 30px;
+}
+
+.contact-container p {
+    margin: 30px;
+}
+
+.contact-content {
+    padding: 40px;
+}
+
+
+
+
+/* contact page */
 
 /* Media queries */
 
