--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ nav img {
 }
 
 .how-does-work-container {
-    background-color: aqua;
+    background-color: #fff;
     width: 100%;
     height: 500px;
 }
@@ -138,9 +138,17 @@ nav img {
     border: 2px solid yellow;
 }
 .how-does-work-h2-and-boxes h2 {
+    font-family: 'Bebas Neue', cursive;;
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 52px;
+    text-align: center;
+}
+
+.how-does-work-h2-and-boxes p {
+    font-family: 'Bebas Neue', cursive;
+    margin-bottom: 10px;
+    font-size: 15px;
     text-align: center;
 }
 
@@ -149,13 +157,17 @@ nav img {
     justify-content: center;
     text-align: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 
 .box-steps {
-    width: 200px;
+    width: 95px;
     text-align: center;
     outline: 4px solid #777;
+    border-radius: 10%;
+    padding: 35px;
+    margin: 20px;
 }
 
 /* how does it work retry */
@@ -376,7 +388,7 @@ hr {
     width: 55%;
     float: left;
     background-color: #f8594e;
-    padding: 100px;
+    padding: 45px;
 }
 
 .inner-container h1 {
