Add media querie for contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,3 +480,13 @@ footer {
     }
 
 }
+
+
+/* about medium screen sizes from 650px wide and down */
+
+@media screen and (max-width: 750px){
+
+.your-description textarea {
+    width: 90%;
+}
+}
