--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ nav {
 }
 
 nav img {
-    width: 150px;
+    width: 120px;
 }
 
 .nav-links {
@@ -110,6 +110,10 @@ nav img {
         margin-bottom: 25px;
         line-height: 20px;
         float: right;
+    }
+
+    nav img {
+        width: 60px;
     }
 
     .text-box {
@@ -237,7 +241,7 @@ nav img {
 
 .gallery-wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-gap: 5px;
     margin-bottom: 0;
     padding: 25px;
