--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,13 +140,13 @@ nav img {
 .how-does-work-bg {
     background-color: #fff;
     width: 100%;
-    height: 450px;
+    height: fit-content;
 }
 
 .how-does-work-container {
     background-color: #fff;
     width: 100%;
-    height: 500px;
+
 }
 
 .how-does-work-h2-and-boxes {
@@ -188,7 +188,7 @@ nav img {
 
 @media screen and (max-width: 650px){
     .how-does-work-boxes {
-        width: 200px;
+        width: 100%;
         height: auto;
     }
 }
@@ -263,8 +263,7 @@ nav img {
 
 /* about us */
 
-#about-us {
-    min-height: 0;
+#about-us-section-bg {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -277,17 +276,16 @@ nav img {
     background-color: #fff;
     display: flex;
     justify-content: center;
-    overflow: hidden;
     padding: 30px 0;
 }
 
-.inner-container {
+.about-section-container {
     width: 50%;
     background-color: #f8594e;
     padding: 45px;
 }
 
-.inner-container h1 {
+.about-section-container h1 {
     color: #fff;
     margin-bottom: 30px;
     font-size: 30px;
@@ -314,9 +312,7 @@ nav img {
 /* footer-section */
 
 footer {
-    position: absolute;
-    background: #202020;
-    height: auto;
+    background: #222222;
     width: 100%;
     font-family: 'Roboto', sans-serif;
     padding-top: 30px;
